deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: goserver
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 2
  template:
    metadata: 
      labels:
        app: "goserver"
    spec:
      containers:
        - name: goserver
          image: abauruel/hello-go:v2
