ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "ingress.fullcycle.com.br"
      http:
        paths:
          - pathType: Prefix
            path: "/admin"
            backend:
              serviceName: goserver-service
              servicePort: 80
      tls:
        - hosts:
            - "ingress.fullcycle.com.br"
          secretName: letsencrypt-tls
